# code-exercises

2021/day01/src/: main.rs
2021/day05/src/: lib.rs
2021/day08/src/: lib.rs
2021/day09/src/: lib.rs
2021/day11/src/: lib.rs
2021/day14/src/: lib.rs
2021/day15/src/: lib.rs
2021/day22/src/: lib.rs
2021/day23/src/: lib.rs
advent-of-code/rust/2023/day01/: Cargo.toml
advent-of-code/rust/2023/day01/src/: lib.rs
assembly-line/src/: lib.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
dot-dsl/.exercism/: metadata.json
exercism/rust/assembly-line/.exercism/: metadata.json
exercism/rust/dot-dsl/src/: lib.rs
exercism/rust/low-power-embedded-game/.exercism/: metadata.json
exercism/rust/macros/.exercism/: metadata.json
exercism/rust/magazine-cutout/.exercism/: metadata.json
exercism/rust/minesweeper/.exercism/: metadata.json
exercism/rust/minesweeper/src/: lib.rs
exercism/rust/parallel-letter-frequency/.exercism/: metadata.json
exercism/rust/raindrops/.exercism/: metadata.json
gigasecond/.exercism/: metadata.json
health-statistics/.exercism/: metadata.json
health-statistics/src/: lib.rs
low-power-embedded-game/src/: lib.rs
lucians-luscious-lasagna/.exercism/: metadata.json
lucians-luscious-lasagna/src/: lib.rs
macros/src/: lib.rs
magazine-cutout/src/: lib.rs
parallel-letter-frequency/src/: lib.rs
raindrops/src/: lib.rs
role-playing-game/src/: lib.rs
semi-structured-logs/.exercism/: metadata.json
short-fibonacci/src/: lib.rs
space-age/.exercism/: metadata.json
space-age/src/: lib.rs
(+27 files in other folders)
